--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
            <h3>Newsletter</h3>
            <p>Sign up to our newsletter to recive awesome news about fresh air.</p>
            <form>
-               <input type="text">
+               <input type="text" id="email">
                <button type="submit">Subscribe</button>
+               <input type="checkbox" name="" id="terms">
+               <label form="terms">I accept the <a href="http://" target="_blank">terms and conditions</a></label>
            </form>
+        <div id="closex">
+            x
+        </div>
        </div>
        <h3>Következő Fejezet</h3>
    </div> 
