--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                <input type="text" id="email">
                <button type="submit">Subscribe</button>
                <input type="checkbox" name="" id="terms">
-               <label form="terms">I accept the <a href="http://" target="_blank">terms and conditions</a></label>
+               <label for="terms">I accept the <a href="http://" target="_blank">terms and conditions</a></label>
            </form>
         <div id="closex">
             x
